--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,14 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
         <version>3.5.1</version>
+          <configuration>
+              <relocations>
+                  <relocation>
+                      <pattern>de.tr7zw.changeme.nbtapi</pattern>
+                      <shadedPattern>me.ddggdd135.libraries.nbtapi</shadedPattern>
+                  </relocation>
+              </relocations>
+          </configuration>
         <executions>
           <execution>
             <phase>package</phase>
@@ -62,6 +70,18 @@
           <id>jitpack.io</id>
           <url>https://jitpack.io</url>
       </repository>
+      <repository>
+          <id>placeholderapi</id>
+          <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+      </repository>
+      <repository>
+          <id>minebench-repo</id>
+          <url>https://repo.minebench.de/</url>
+      </repository>
+      <repository>
+          <id>codemc-repo</id>
+          <url>https://repo.codemc.org/repository/maven-public/</url>
+      </repository>
   </repositories>
 
   <dependencies>
@@ -84,6 +104,12 @@
           <scope>provided</scope>
       </dependency>
       <dependency>
+          <groupId>me.clip</groupId>
+          <artifactId>placeholderapi</artifactId>
+          <version>2.11.5</version>
+          <scope>provided</scope>
+      </dependency>
+      <dependency>
           <groupId>org.graalvm.js</groupId>
           <artifactId>js-scriptengine</artifactId>
           <version>23.0.2</version>
@@ -93,6 +119,12 @@
           <groupId>org.graalvm.js</groupId>
           <artifactId>js</artifactId>
           <version>23.0.2</version>
+          <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>de.tr7zw</groupId>
+          <artifactId>item-nbt-api-plugin</artifactId>
+          <version>2.12.4</version>
           <scope>provided</scope>
       </dependency>
   </dependencies>
