--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,3 +6,7 @@ authors:
   - JWJUN233233
 depend:
   - Slimefun
+libraries:
+  - org.graalvm.js:js-scriptengine:23.0.2
+  - org.graalvm.js:js:23.0.2
+  - org.graalvm.truffle:truffle-api:23.0.2
