--- a/pom.xml
+++ b/pom.xml
@@ -27,27 +27,43 @@
           <target>16</target>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-shade-plugin</artifactId>
-        <version>3.5.1</version>
-          <configuration>
-              <relocations>
-                  <relocation>
-                      <pattern>de.tr7zw.changeme.nbtapi</pattern>
-                      <shadedPattern>me.ddggdd135.libraries.nbtapi</shadedPattern>
-                  </relocation>
-              </relocations>
-          </configuration>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-shade-plugin</artifactId>
+          <version>3.5.1</version>
+            <configuration>
+                <relocations>
+                    <relocation>
+                        <pattern>de.tr7zw.changeme.nbtapi</pattern>
+                        <shadedPattern>me.ddggdd135.libraries.nbtapi</shadedPattern>
+                    </relocation>
+                </relocations>
+            </configuration>
+          <executions>
+            <execution>
+              <phase>package</phase>
+              <goals>
+                <goal>shade</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+            <groupId>com.diffplug.spotless</groupId>
+            <artifactId>spotless-maven-plugin</artifactId>
+            <version>2.43.0</version>
+            <configuration>
+                <java>
+                    <palantirJavaFormat>
+                        <version>2.38.0</version>
+                        <style>PALANTIR</style>
+                    </palantirJavaFormat>
+
+                    <removeUnusedImports />
+                    <formatAnnotations />
+                </java>
+            </configuration>
+        </plugin>
     </plugins>
     <resources>
       <resource>
