--- a/pom.xml
+++ b/pom.xml
@@ -131,9 +131,9 @@
           <scope>provided</scope>
       </dependency>
       <dependency>
-          <groupId>de.tr7zw</groupId>
-          <artifactId>item-nbt-api</artifactId>
-          <version>2.14.1</version>
+          <groupId>com.github.TimetownDev</groupId>
+          <artifactId>Item-NBT-API</artifactId>
+          <version>f109d2ada8</version>
       </dependency>
   </dependencies>
 </project>
