--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.4.1</version>
+                <version>3.6.0</version>
                 <executions>
                     <execution>
                         <id>shade</id>
@@ -48,6 +48,10 @@
                         <relocation>
                             <pattern>de.tr7zw.changeme.nbtapi</pattern>
                             <shadedPattern>me.ddggdd135.guguslimefunlib.libraries.nbtapi</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>me.matl114.matlib</pattern>
+                            <shadedPattern>me.ddggdd135.guguslimefunlib.libraries.matlib</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
@@ -134,6 +138,12 @@
           <groupId>com.github.TimetownDev</groupId>
           <artifactId>Item-NBT-API</artifactId>
           <version>f109d2ada8</version>
+      </dependency>
+      <dependency>
+          <groupId>com.github.m1919810</groupId>
+          <artifactId>matlib</artifactId>
+          <version>53afb17bced0f07df687ad71fd90294b7ac7d799</version>
+          <scope>compile</scope>
       </dependency>
   </dependencies>
 </project>
