--- a/pom.xml
+++ b/pom.xml
@@ -131,7 +131,7 @@
       <dependency>
           <groupId>com.github.SlimefunGuguProject</groupId>
           <artifactId>Slimefun4</artifactId>
-          <version>2025.1</version>
+          <version>master-SNAPSHOT</version>
           <scope>provided</scope>
       </dependency>
       <dependency>
